[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AEI"
version = "1.4.0"
description = "Arimaa Engine Interface tools"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Janzert", email = "janzert@janzert.com"}
]
keywords = ["Arimaa"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Board Games",
]

[project.urls]
Homepage = "https://arimaa.janzert.com/aei"
"Source Code" = "https://github.com/janzert/aei"

[project.scripts]
analyze = "pyrimaa.analyze:main"
gameroom = "pyrimaa.gameroom:main"
postal_controller = "pyrimaa.postal_controller:main"
pyrimaa_tests = "pyrimaa.test_runner:main"
roundrobin = "pyrimaa.roundrobin:main"
simple_engine = "pyrimaa.simple_engine:main"

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.0",
    "ruff>=0.8.0",
]

[tool.setuptools]
packages = ["pyrimaa", "pyrimaa.tests"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*example.cfg"]

[tool.coverage.run]
source = ["pyrimaa"]
omit = [
    "pyrimaa/tests/*",
    "pyrimaa/test_runner.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.format]
quote-style = "double"
